# peirce-lm-dynamics

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  basins.md  brief.md  design-reqs-records.md  design-reqs-steering.md  design-reqs.md  foundation.md  ideas.md  lit-review.md  observations.md  pyproject.toml
archive/: brief.md  cycle-1-findings.md  deprecated-terms.md  design-reqs-records.md  foundation-v0.1.md  ideas-cycle-1.md  observations-cycle-1.md  realignment.md
notes/: regime-tag-consolidation.md
peirce/: CLAUDE.md  README.md  __init__.py  __main__.py  basins.py  engine.py  predicates.py  records.py  regime.py  runner.py  shape.py  store.py
reports/: regime-vocab-precedent.md
scripts/: CLAUDE.md  README.md  branch_compare.py  broad_shallow.py  first_batch_branches.py  full_depth_extension.py  high_h_readout.py  noperiod_audit.py  phase_aware_chosen.py  plot_branches.py  plot_trajectories.py  regime_tag_audit.py  representative_deep.py  selection_bias.py  shape_catalog.py  smoke_engine.py  smoke_kv_parity.py  smoke_l1.py  smoke_store.py  v2_calibration_probe.py
tests/: test_regime.py
