[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peirce"
version = "0.1.0"
description = "Studying the intrinsic dynamics of language models conditioning on their own output"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pyarrow>=24.0.0",
    "structlog>=25.5.0",
    "torch>=2.6.0",
    "transformers>=5.6.2",
    "zarr>=3.1.6",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
